# cdh-utilities

./: .gitignore  README.md  create_img.sh  toolchain-arm-blue.cmake  toolchain-bbb.cmake  toolchain-linux.cmake  uboot.env
moveio/: CMakeLists.txt  README.md  moveio-config.cmake
moveio/include/: GPIOPin.h  I2CDevice.h  PinMapper.h  SPIDevice.h
moveio/mappings/: beaglebone_mapping.cfg
moveio/src/: GPIOPin.cpp  I2CDevice.cpp  PinMapper.cpp  SPIDevice.cpp
moveio/test/: CMakeLists.txt  gpio_test.cpp  gpio_wait.cpp  i2c_test.cpp  pinmap.cpp  spitest.cpp
spi-parallel-access-test/: CMakeLists.txt  README.md
spi-parallel-access-test/master/: CMakeLists.txt  DataSender.cpp  DataSender.h  DataSenderThread.cpp  DataSenderThread.h  main.cpp
spi-parallel-access-test/slave-mock/: CMakeLists.txt  GpioReader.cpp  GpioReader.h  PrioritySwitcher.cpp  StateChangeCounter.cpp  StateChangeCounter.h  main.cpp
template/: CMakeLists.txt
template/include/: hello.h
template/src/: hello.cpp
